fix overflow x

--- a/css/addcss.css
+++ b/css/addcss.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .slog {
 
     font-size: 38px;
